syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message StartCountingMessage {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message CountdownMessage {
  int64 currentServerValue = 1;
}

message Empty {}

service CountingService {
  rpc initCounting(StartCountingMessage) returns (stream CountdownMessage);
}
